--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -26,5 +26,23 @@
     "Oktober",
     "November",
     "Dezember"
+  ],
+  "ddd": [
+    "So",
+    "Mo",
+    "Di",
+    "Mi",
+    "Do",
+    "Fr",
+    "Sa"
+  ],
+  "dddd" : [
+    "Sonntag",
+    "Montag",
+    "Dienstag",
+    "Mittwoch",
+    "Donnerstag",
+    "Freitag",
+    "Samstag"
   ]
 }
